feat(client): add loading screen

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,1 +1,11 @@
+<div id="splash-screen" class="absolute inset-0 flex justify-center items-center bg-white z-[100]">
+  <div class="spinner border-4 border-l-4"></div>
+</div>
+
+<!-- Toast Messages -->
+<p-toast position="top-center"></p-toast>
+
+<!-- Confirmation Dialog -->
+<p-confirmDialog></p-confirmDialog>
+
 <router-outlet />
