feat(client): add auto update banner service worker

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,3 +1,5 @@
+<app-update-banner />
+
 <div id="splash-screen" class="absolute inset-0 flex justify-center items-center bg-white z-[100]">
   <div class="spinner border-4 border-l-4"></div>
 </div>
