--- a/client/src/components/update-banner/update-banner.html
+++ b/client/src/components/update-banner/update-banner.html
@@ -1,23 +1,7 @@
-<div class="update-banner" [class]="visibilityClass" role="alert" aria-live="assertive">
-  <div class="banner-content">
-    <div class="banner-icon">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-        <path
-          d="M21 12c0 1-.2 2-.6 2.9l1.2 1.2c.6-1.3.9-2.7.9-4.1 0-5.5-4.5-10-10-10S2 6.5 2 12s4.5 10 10 10c1.4 0 2.8-.3 4.1-.9l-1.2-1.2c-.9.4-1.9.6-2.9.6-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7z" />
-        <path d="M16 12l-4-4v3H8v2h4v3l4-4z" />
-      </svg>
-    </div>
-    <div class="banner-text">
-      <p class="banner-title">Update Available</p>
-      <p class="banner-message">A new version of the app is ready to install.</p>
-    </div>
-    <div class="banner-actions">
-      <button class="btn btn-update" (click)="updateApp()" aria-label="Update the application">
-        Update
-      </button>
-      <button class="btn btn-dismiss" (click)="dismissUpdate()" aria-label="Dismiss update notification">
-        Later
-      </button>
-    </div>
-  </div>
+@if (updateService.updateAvailable$ | async) {
+<div class="update-banner">
+  <span>A new version of the app is available.</span>
+  <button (click)="reload()">Update</button>
+  <button (click)="dismiss()">Later</button>
 </div>
+}
