--- a/client/src/components/update-banner/update-banner.html
+++ b/client/src/components/update-banner/update-banner.html
@@ -1,12 +1,12 @@
-<!-- @if (updateService.updateAvailable$ | async) { -->
+@if (updateService.updateAvailable$ | async) {
 <div class="bg-primary p-3 text-sm flex justify-between items-center gap-1">
   <div class="flex items-center gap-2">
     <i class="pi pi-sync" style="font-size: 15px"></i>
-    <span>A new version of the app is available.</span>
+    <span>A new version of the app :d is available.</span>
   </div>
   <div class="flex items-center gap-2">
     <button class="bg-primary-900 py-1 px-2 rounded-sm cursor-pointer" (click)="reload()">Update</button>
     <button class="bg-white text-primary py-1 px-2 rounded-sm cursor-pointer" (click)="dismiss()">Later</button>
   </div>
 </div>
-<!-- } -->
+}
