--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -4,6 +4,10 @@
   <div class="spinner border-4 border-l-4"></div>
 </div>
 
+<menu-bar (historyOpen)="showWorkoutHistory = true" />
+
+<workouts-history-dialog [open]="showWorkoutHistory" [workouts]="workoutService.workouts()" />
+
 <!-- Toast Messages -->
 <p-toast position="top-center"></p-toast>
 
