--- a/client/src/components/menu/menu.html
+++ b/client/src/components/menu/menu.html
@@ -1,7 +1,7 @@
 <div class="bg-white shadow-sm border-b sticky top-0 z-50">
   <div class="px-4 py-3 flex items-center justify-between">
     <div class="flex items-center space-x-2">
-      <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center">
+      <div routerLink="/" class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center cursor-pointer">
         <i class="pi pi-bolt text-white text-sm"></i>
       </div>
       <h1 class="text-lg font-bold text-gray-900">Gym Tracker</h1>
