--- a/client/src/components/create-session-dialog/create-session-dialog.html
+++ b/client/src/components/create-session-dialog/create-session-dialog.html
@@ -1,57 +1,59 @@
 <p-dialog
-  header="Workout History"
+  header="Create session"
   class="flex"
   [(visible)]="open"
   (visibleChange)="onOpenChange($event)"
   [modal]="true"
-  [style]="{ width: '95vw', height: '90vh' }"
+  [style]="{ width: '95vw', height: '80vh' }"
+  [contentStyle]="{ display: 'flex', flexDirection: 'column', height: '100%' }"
   [maximizable]="false"
   [draggable]="false"
   [resizable]="false"
 >
-  <div class="overflow-y-auto flex flex-col justify-between gap-4 flex-1">
-    <div class="py-4 space-y-4">
-      <div>
-        <label for="session-name" class="block text-sm font-medium text-gray-700 mb-2"
-          >Session Name</label
-        >
-        <input
-          id="session-name"
-          type="text"
-          [(ngModel)]="name"
-          class="w-full px-3 py-2.5 border border-blue-500 rounded-lg focus:ring-2 transition-colors placeholder:opacity-50"
-          placeholder="e.g., Upper Body Power"
-        />
-      </div>
+  <div class="flex flex-col h-full overflow-hidden">
+    <div class="py-4 shrink-0">
+      <label for="session-name" class="block text-sm font-medium text-gray-700 mb-2"
+        >Session Name</label
+      >
+      <input
+        id="session-name"
+        type="text"
+        [(ngModel)]="name"
+        class="w-full px-3 py-2.5 border border-blue-500 rounded-lg focus:ring-2 transition-colors placeholder:opacity-50"
+        placeholder="e.g., Upper Body Power"
+      />
+    </div>
 
+    <div class="flex-1 overflow-y-auto space-y-4">
       @for (exercise of exercises; track $index) {
         <div class="bg-white rounded-md p-4 shadow-sm border text-black">
           {{ exercise.name }}
         </div>
       }
     </div>
+  </div>
 
-    <div class="flex flex-col gap-4">
-      <p-button
-        label="Add Exercise"
-        icon="pi pi-plus"
-        (onClick)="showAddExercise = true"
-        styleClass="w-full p-button-md p-button-outlined"
+  <div class="flex flex-col gap-4 pt-4 shrink-0">
+    <p-button
+      label="Add Exercise"
+      icon="pi pi-plus"
+      (onClick)="showAddExercise = true"
+      styleClass="w-full p-button-md p-button-outlined"
+    >
+    </p-button>
+    <div class="flex space-x-3">
+      <button
+        class="flex-1 cursor-pointer px-4 py-2.5 border border-gray-300 text-gray-700 rounded-lg hover:bg-gray-100 transition-colors font-medium"
+        (click)="cancelSessionCreation()"
       >
-      </p-button>
-      <div class="flex space-x-3">
-        <button
-          class="flex-1 px-4 py-2.5 border border-gray-300 text-gray-700 rounded-lg hover:bg-gray-100 transition-colors font-medium"
-          (onClick)="cancelSessionCreation()"
-        >
-          Cancel
-        </button>
-        <button
-          class="flex-1 px-4 py-2.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors font-medium"
-        >
-          Create & Add Exercises
-        </button>
-      </div>
+        Cancel
+      </button>
+      <button
+        class="flex-1 cursor-pointer px-4 py-2.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors font-medium"
+        (click)="createSession()"
+      >
+        Create & Add Exercises
+      </button>
     </div>
   </div>
 </p-dialog>
