feat(client): add session card context menu actions

--- a/client/src/components/session-card/session-card.html
+++ b/client/src/components/session-card/session-card.html
@@ -53,3 +53,12 @@
 </div>
 
 <p-contextmenu #cm [model]="contextMenuItems" [pressDelay]="0" />
+
+<session-dialog
+  [(open)]="showEditDialog"
+  (openChange)="showEditDialog = $event"
+  [session]="session()"
+  title="Edit session"
+  buttonLabel="Update"
+  action="edit"
+></session-dialog>
