feat(client): allow float number in weight input

--- a/client/src/components/set-input/set-input.html
+++ b/client/src/components/set-input/set-input.html
@@ -14,6 +14,9 @@
       [(ngModel)]="set().weight"
       (onInput)="onUpdateSet(exercise()._id!, index(), 'weight', +($event.value ?? 0))"
       [showButtons]="true"
+      mode="decimal"
+      [minFractionDigits]="0"
+      [maxFractionDigits]="2"
       [min]="0"
       [step]="1"
       inputStyleClass="text-center w-full"
