feat(client): create number ios picker

--- a/client/src/components/set-input/set-input.html
+++ b/client/src/components/set-input/set-input.html
@@ -13,7 +13,7 @@
       id="{{ exercise()._id }}-weigth-{{ index() }}"
       [(ngModel)]="set().weight"
       (onInput)="onUpdateSet(exercise()._id!, index(), 'weight', +($event.value ?? 0))"
-      [showButtons]="true"
+      [showButtons]="false"
       mode="decimal"
       [minFractionDigits]="0"
       [maxFractionDigits]="2"
@@ -40,7 +40,7 @@
       id="{{ exercise()._id }}-reps-{{ index() }}"
       [(ngModel)]="set().reps"
       (onInput)="onUpdateSet(exercise()._id!, index(), 'reps', +($event.value ?? 0))"
-      [showButtons]="true"
+      [showButtons]="false"
       [min]="0"
       [step]="1"
       inputStyleClass="text-center w-full"
