--- a/client/src/components/no-active-workout/no-active-workout.html
+++ b/client/src/components/no-active-workout/no-active-workout.html
@@ -7,7 +7,20 @@
     <p class="text-gray-600">Start your workout and track your progress</p>
   </div>
 
-  <p-button label="Start Workout" icon="pi pi-play" (onClick)="onStartWorkout()" styleClass="w-full max-w-xs mx-auto"
-    size="large">
+  <number-picker
+    [min]="1"
+    [max]="400"
+    [initialValue]="2"
+    [suffix]="''"
+    (valueChange)="onNumberPickerChange($event)"
+  ></number-picker>
+
+  <p-button
+    label="Start Workout"
+    icon="pi pi-play"
+    (onClick)="onStartWorkout()"
+    styleClass="w-full max-w-xs mx-auto"
+    size="large"
+  >
   </p-button>
 </div>
