fix(client): remove debug text

--- a/client/src/components/number-picker/number-picker.html
+++ b/client/src/components/number-picker/number-picker.html
@@ -29,9 +29,7 @@
         style="overscroll-behavior: contain"
       >
         <!-- Top padding -->
-        <div [style.height.px]="paddingHeight">
-          <span class="text-black">{{ this.initialValue() }}</span>
-        </div>
+        <div [style.height.px]="paddingHeight"></div>
 
         <!-- Virtual scroll spacer top -->
         <div [style.height.px]="topPadding()"></div>
