--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,6 +3,7 @@
 @import "primeicons/primeicons.css";
 
 html {
+  @apply bg-gradient-to-br from-slate-50 to-blue-50;
   font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
 }
