--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,3 +7,39 @@ html {
   font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
 }
+
+.p-select {
+  width: 100% !important;
+  color: var(--color-black) !important;
+  border: 1px solid var(--color-blue-100) !important;
+  background: var(--color-white) !important;
+}
+
+.p-select-label {
+  color: black !important;
+}
+
+.p-select-overlay {
+  border: 1px solid var(--color-blue-100) !important;
+  border-radius: 0.25rem !important;
+  background: var(--color-white) !important;
+}
+
+.p-select-option {
+  color: var(--color-black) !important;
+  background: #f7fafd !important;
+}
+
+.p-select-option-selected {
+  background: #e9f2fa !important;
+}
+
+.p-select-option:hover {
+  background: #e9f2fa !important;
+}
+
+.p-select-filter {
+  border: 1px solid var(--color-blue-100) !important;
+  background: var(--color-white) !important;
+  color: var(--color-gray-800) !important;
+}
