feat(client): add calendar history page

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -8,13 +8,7 @@
 
 <main class="min-h-screen bg-gradient-to-br from-slate-50 to-blue-50">
   @if (authService.isLoggedIn()) {
-    <menu-bar (historyOpen)="showWorkoutHistory = true" />
-
-    <workouts-history-dialog
-      [(open)]="showWorkoutHistory"
-      [workouts]="workoutService.workouts()"
-      (openChange)="showWorkoutHistory = $event"
-    />
+    <menu-bar />
   }
 
   <p-toast position="top-center"></p-toast>
