--- a/client/src/components/menu/menu.html
+++ b/client/src/components/menu/menu.html
@@ -29,7 +29,7 @@
 
       <p-button
         icon="pi pi-history"
-        (onClick)="onHistoryOpen()"
+        routerLink="/history"
         styleClass="p-button-text p-button-rounded p-button-sm"
         [text]="true"
       >
