feat(client): add users settings with weight and height

--- a/client/src/components/menu/menu.html
+++ b/client/src/components/menu/menu.html
@@ -34,6 +34,16 @@
         [text]="true"
       >
       </p-button>
+
+      <span class="h-5 w-[1px] bg-blue-200"></span>
+
+      <p-button
+        routerLink="/settings"
+        styleClass="p-button-text p-button-rounded p-button-sm"
+        icon="pi pi-cog"
+        [text]="true"
+      >
+      </p-button>
     </div>
   </div>
 </div>
