--- a/client/src/components/settings-input-number/settings-input-number.html
+++ b/client/src/components/settings-input-number/settings-input-number.html
@@ -1,7 +1,17 @@
 <div>
-  <label [for]="model().slug" class="block text-sm font-medium text-gray-700 mb-2">{{
-    label()
-  }}</label>
+  <div class="flex items-center gap-2 mb-2">
+    <label [for]="model().slug" class="block text-sm font-medium text-gray-700">{{
+      label()
+    }}</label>
+
+    @if (loading()) {
+      <i class="pi pi-spinner-dotted pi-spin text-blue-500" style="font-size: 0.7rem"></i>
+    }
+
+    @if (saved()) {
+      <i class="pi pi-check text-green-500" style="font-size: 0.7rem"></i>
+    }
+  </div>
 
   <div class="relative">
     <input
