--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -43,3 +43,9 @@ html {
   background: var(--color-white) !important;
   color: var(--color-gray-800) !important;
 }
+
+.p-inputnumber-input {
+  background: #ffffff !important;
+  color: #000 !important;
+  border: 1px solid var(--color-blue-100) !important;
+}
