--- a/client/src/components/workouts-history-dialog/workouts-history-dialog.html
+++ b/client/src/components/workouts-history-dialog/workouts-history-dialog.html
@@ -37,6 +37,7 @@
             </div>
             <div>
               <div class="text-sm text-gray-500">{{ workout.exercises.length }} exercises</div>
+              <div class="text-sm text-gray-500">{{ workout.calories }} calories</div>
             </div>
           </div>
 
