--- a/client/src/components/workouts-history-dialog/workouts-history-dialog.html
+++ b/client/src/components/workouts-history-dialog/workouts-history-dialog.html
@@ -55,6 +55,17 @@
                     </span>
                   }
                 </div>
+
+                @if (!!exercise.notes) {
+                  <div class="flex flex-col gap-2 mt-4">
+                    <h5 class="font-medium text-gray-900">Notes</h5>
+
+                    <span
+                      class="text-black text-sm bg-gray-100 p-2 rounded-lg border border-gray-200"
+                      >{{ exercise.notes }}</span
+                    >
+                  </div>
+                }
               </div>
             }
           </div>
